# mlflow-enterprise-gateway

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirement.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
demo/: README.md  k8s_smoke_test.sh  run_demo.sh  seed.py  smoke_test.sh
demo/curl/: create_run.sh  get_run_other_tenant.sh  get_run_same_tenant.sh  search_other_tenant.sh
deploy/helm/: Chart.yaml  values-smoke.yaml  values.yaml
deploy/helm/templates/: deployment.yaml  ingress.yaml  service.yaml
deploy/k8s/: gateway-ingress.yaml  gateway-service.yaml  mlflow-service.yaml  networkpolicy-mlflow-only-from-gateway.yaml
deploy/k8s/smoke/: mlflow-smoke.yaml
deploy/openshift/: gateway-route.yaml  networkpolicy-mlflow-from-gateway.yaml
docker/: mlflow.Dockerfile
docs/: audit.md  integration.md  kubernetes-architecture.md  kubernetes-smoke-test.md  openshift-architecture.md  rbac.md
gateway/: __init__.py  audit.py  auth.py  config.py  main.py  rbac.py
gateway/mlflow/: __init__.py  tenant.py
tests/: test_audit_schema.py  test_auth_mode_semantics.py  test_health.py  test_jwt.py  test_rbac.py  test_rbac_enforcement.py  test_registry_tenant_policy.py  test_runs_tenant_policy.py  test_tenant.py  test_tenant_tags_compat.py
